@@ -15,6 +15,10 @@ Config:
     Name of a StatAccumInput instance that this StatsdInput will use as its
     StatAccumulator for submitting received stat values. Defaults to
     "StatAccumInput".
+- max_msg_size (uint):
+	Size of a buffer used for message read from statsd. In some cases, when statsd
+	sends a lots in single message of stats it's required to boost this value.
+	All over-length data will be truncated without raising an error. Defaults to 512.
 
 Example:
 
